@@ -172,7 +172,7 @@ struct joystick_info {
   int *type;
   HWND radio[ JOYSTICK_TYPE_COUNT ];
 
-  struct button_info button[10];
+  struct button_info button[NUM_JOY_BUTTONS];
 };
 
 static void setup_info( struct joystick_info *info, int action );
@@ -225,6 +225,11 @@ dialog_proc( HWND hwndDlg, UINT uMsg, WPARAM wParam, LPARAM lParam )
         case IDC_JOYSTICKS_BUTTON_BUTTON8:
         case IDC_JOYSTICKS_BUTTON_BUTTON9:
         case IDC_JOYSTICKS_BUTTON_BUTTON10:
+        case IDC_JOYSTICKS_BUTTON_BUTTON11:
+        case IDC_JOYSTICKS_BUTTON_BUTTON12:
+        case IDC_JOYSTICKS_BUTTON_BUTTON13:
+        case IDC_JOYSTICKS_BUTTON_BUTTON14:
+        case IDC_JOYSTICKS_BUTTON_BUTTON15:
           show_key_selection_popoup( hwndDlg, lParam );
           return 0;
           
@@ -252,7 +257,7 @@ dialog_init( HWND hwndDlg, struct joystick_info *info )
   size_t i;
   create_joystick_type_selector( info, hwndDlg );
 
-  for( i = 0; i < 10; i++ ) {
+  for( i = 0; i < NUM_JOY_BUTTONS; i++ ) {
     
     info->button[i].label = GetDlgItem( hwndDlg,
                                        IDC_JOYSTICKS_BUTTON_BUTTON1 + i );
@@ -297,7 +302,12 @@ setup_info( struct joystick_info *info, int action )
     info->button[7].setting = &( settings_current.joystick_1_fire_8  );
     info->button[8].setting = &( settings_current.joystick_1_fire_9  );
     info->button[9].setting = &( settings_current.joystick_1_fire_10 );
-    for( i = 0; i < 10; i++ )
+    info->button[10].setting = &( settings_current.joystick_1_fire_11 );
+    info->button[11].setting = &( settings_current.joystick_1_fire_12 );
+    info->button[12].setting = &( settings_current.joystick_1_fire_13 );
+    info->button[13].setting = &( settings_current.joystick_1_fire_14 );
+    info->button[14].setting = &( settings_current.joystick_1_fire_15 );
+    for( i = 0; i < NUM_JOY_BUTTONS; i++ )
       _sntprintf( info->button[i].name, 80, "Button %lu",
                   (unsigned long)i + 1 );
     break;
@@ -314,7 +324,12 @@ setup_info( struct joystick_info *info, int action )
     info->button[7].setting = &( settings_current.joystick_2_fire_8  );
     info->button[8].setting = &( settings_current.joystick_2_fire_9  );
     info->button[9].setting = &( settings_current.joystick_2_fire_10 );
-    for( i = 0; i < 10; i++ )
+    info->button[10].setting = &( settings_current.joystick_2_fire_11 );
+    info->button[11].setting = &( settings_current.joystick_2_fire_12 );
+    info->button[12].setting = &( settings_current.joystick_2_fire_13 );
+    info->button[13].setting = &( settings_current.joystick_2_fire_14 );
+    info->button[14].setting = &( settings_current.joystick_2_fire_15 );
+    for( i = 0; i < NUM_JOY_BUTTONS; i++ )
       _sntprintf( info->button[i].name, 80, "Button %lu",
                   (unsigned long)i + 1 );
     break;
@@ -331,7 +346,7 @@ setup_info( struct joystick_info *info, int action )
     _sntprintf( info->button[3].name, 80, "Button for RIGHT" );
     info->button[4].setting = &( settings_current.joystick_keyboard_fire  );
     _sntprintf( info->button[4].name, 80, "Button for FIRE" );
-    for( i = 5; i < 10; i++ ) info->button[i].setting = NULL;
+    for( i = 5; i < NUM_JOY_BUTTONS; i++ ) info->button[i].setting = NULL;
     break;
 
   }
@@ -405,7 +420,7 @@ joystick_done( LONG_PTR user_data )
 
   int i;
 
-  for( i = 0; i < 10; i++ )
+  for( i = 0; i < NUM_JOY_BUTTONS; i++ )
     if( info->button[i].setting )
       *info->button[i].setting = info->button[i].key;
 
