@@ -27,7 +27,7 @@
 
 #include "win32joystick.h"
 
-IDD_JOYSTICKS DIALOGEX 0,0,300,149
+IDD_JOYSTICKS DIALOGEX 0,0,420,149
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_FIXEDSYS | WS_VISIBLE | WS_BORDER | WS_CAPTION | WS_DLGFRAME | WS_POPUP | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Fuse - Configure Joystick"
@@ -87,8 +87,28 @@ BEGIN
     LTEXT           "Joystick Fire",IDC_JOYSTICKS_STATIC_BUTTON10,190,110,40,12,SS_CENTERIMAGE
     PUSHBUTTON      "",IDC_JOYSTICKS_BUTTON_BUTTON10,235,110,60,12
 
-    DEFPUSHBUTTON   "OK",IDOK,95,130,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,155,130,50,14
+    GROUPBOX        "Button 11",IDC_JOYSTICKS_GROUP_BUTTON11,305,0,115,25
+    LTEXT           "Joystick Fire",IDC_JOYSTICKS_STATIC_BUTTON11,310,10,40,12,SS_CENTERIMAGE
+    PUSHBUTTON      "",IDC_JOYSTICKS_BUTTON_BUTTON11,355,10,60,12
+
+    GROUPBOX        "Button 12",IDC_JOYSTICKS_GROUP_BUTTON12,305,25,115,25
+    LTEXT           "Joystick Fire",IDC_JOYSTICKS_STATIC_BUTTON12,310,35,40,12,SS_CENTERIMAGE
+    PUSHBUTTON      "",IDC_JOYSTICKS_BUTTON_BUTTON12,355,35,60,12
+
+    GROUPBOX        "Button 13",IDC_JOYSTICKS_GROUP_BUTTON13,305,50,115,25
+    LTEXT           "Joystick Fire",IDC_JOYSTICKS_STATIC_BUTTON13,310,60,40,12,SS_CENTERIMAGE
+    PUSHBUTTON      "",IDC_JOYSTICKS_BUTTON_BUTTON13,355,60,60,12
+
+    GROUPBOX        "Button 14",IDC_JOYSTICKS_GROUP_BUTTON14,305,75,115,25
+    LTEXT           "Joystick Fire",IDC_JOYSTICKS_STATIC_BUTTON14,310,85,40,12,SS_CENTERIMAGE
+    PUSHBUTTON      "",IDC_JOYSTICKS_BUTTON_BUTTON14,355,85,60,12
+
+    GROUPBOX        "Button 15",IDC_JOYSTICKS_GROUP_BUTTON15,305,100,115,25
+    LTEXT           "Joystick Fire",IDC_JOYSTICKS_STATIC_BUTTON15,310,110,40,12,SS_CENTERIMAGE
+    PUSHBUTTON      "",IDC_JOYSTICKS_BUTTON_BUTTON15,355,110,60,12
+
+    DEFPUSHBUTTON   "OK",IDOK,155,130,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,215,130,50,14
 END
 
 /* FIXME: resource should use KEYBOARD codes from keyboard.h */
